<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_summary_order"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:layout_weight="1"
    android:clickable="true"
    android:paddingBottom="6dp"
    android:focusable="true"
    app:cardBackgroundColor="@color/item_file_criteria">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_summary_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <View
            android:id="@+id/line_filename"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/background_all"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_filename"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tv_summary_is_colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_colored"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintTop_toBottomOf="@id/line_filename" />

        <TextView
            android:id="@+id/tv_summary_paper_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper_type_default"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_is_colored"/>

        <TextView
            android:id="@+id/tv_total_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_total_page"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_paper_type"/>

        <TextView
            android:id="@+id/tv_summary_is_binded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binded"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/line_filename"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.8"/>

        <TextView
            android:id="@+id/tv_summary_type_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_type_bind"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_is_binded"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.8"/>

        <TextView
            android:id="@+id/tv_summary_front_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_bind_default"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_type_bind"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.8"/>

        <TextView
            android:id="@+id/tv_summary_back_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_bind_default"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_front_bind"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.8"/>

        <View
            android:id="@+id/line_total_cost"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/background_all"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_back_bind"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintTop_toBottomOf="@id/line_total_cost"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>