<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_label_order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_summary"
            android:textSize="22sp"
            android:padding="4dp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textColor="@color/whiteColor"
            android:background="@color/bg_label_summary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_summary_order"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_summary_order"
                android:scrollbars="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_label_order_summary"/>

        <TextView
            android:id="@+id/tv_label_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_shipping_to"
            android:textSize="22sp"
            android:padding="4dp"
            android:background="@color/bg_label_summary"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_summary_order"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_shipping_to"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingBottom="6dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/item_file_criteria"
            app:layout_constraintTop_toBottomOf="@id/tv_label_shipping">

            <android.support.constraint.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="8dp">
                <TextView
                    android:id="@+id/tv_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/default_customer_name"/>
                <TextView
                    android:id="@+id/tv_shipping_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/default_adress"
                    app:layout_constraintTop_toBottomOf="@id/tv_customer_name"/>
                <TextView
                    android:id="@+id/tv_adress_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:text="@string/default_distance"
                    app:layout_constraintTop_toBottomOf="@id/tv_shipping_adress"/>
                <TextView
                    android:id="@+id/tv_shipping_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:text="@string/default_shipping_fee"
                    app:layout_constraintTop_toBottomOf="@id/tv_adress_distance"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_checkout_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/whiteColor"
            android:background="@drawable/custom_btn_next"
            app:layout_constraintTop_toBottomOf="@id/cv_shipping_to"
            android:text="@string/next"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>