<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="4dp">

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/map" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_autocomplete_fragment"
        tools:context=".OrderMapsActivity" />

    <TextView
        android:id="@+id/tv_label_jarak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:drawableLeft="@drawable/ic_place_black_24dp"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"/>

    <TextView
        android:id="@+id/tv_nilai_jarak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/distance_value"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.9"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_label_biaya_antar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_local_shipping_black_24dp"
        android:drawablePadding="8dp"
        android:text="@string/delivery_fee"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_simpan_lokasi_kirim"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_jarak"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_nilai_harga_antar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nilai_jarak"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/delivery_fee_value"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.9"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_simpan_lokasi_kirim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn_next"
        android:text="@string/next"
        android:textColor="@color/whiteColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_biaya_antar" />

</android.support.constraint.ConstraintLayout>

</ScrollView>