<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:layout_weight="1"
    android:clickable="true"
    android:paddingBottom="6dp"
    android:focusable="true"
    app:cardBackgroundColor="@color/item_file_criteria">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/file_name"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rg_color_choice"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioGroup
            android:id="@+id/rg_color_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_file_name">
            <RadioButton
                android:id="@+id/rb_colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_colored" />
            <RadioButton
                android:id="@+id/rb_monochrome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_monochrome" />
        </RadioGroup>


        <CheckBox
            android:id="@+id/cb_is_all_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/rg_color_choice"
            android:text="@string/all_page"
            android:layout_marginLeft="32dp" />

        <EditText
            android:id="@+id/et_page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_is_all_page"
            android:hint="@string/num_page" />

        <Spinner
            android:id="@+id/sp_paper_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sp_front_bind"
            app:layout_constraintTop_toBottomOf="@id/et_page_number"
            app:layout_constraintVertical_bias="0.333" />

        <CheckBox
            android:id="@+id/cb_is_binded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toRightOf="@id/rg_color_choice"
            app:layout_constraintTop_toBottomOf="@id/tv_file_name"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/binded"
            android:layout_marginLeft="32dp" />

        <Spinner
            android:id="@+id/sp_bind_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/cb_is_binded"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/rg_color_choice"
            app:layout_constraintBottom_toTopOf="@id/sp_front_bind" />

        <Spinner
            android:id="@+id/sp_front_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/sp_bind_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/rg_color_choice"
            app:layout_constraintBottom_toTopOf="@id/sp_back_bind" />

        <Spinner
            android:id="@+id/sp_back_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/sp_front_bind"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/rg_color_choice"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>